# RadioJKK

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  README_PL.md
radioJKK32/: CMakeLists.txt  eq.txt  index.html  partitions_radiojkk.csv  sdkconfig.defaults  sdkconfig.defaults.esp32  settings.txt  stations.txt
radioJKK32/components/ai-thinker-esp32-a1s/: Kconfig.projbuild
radioJKK32/components/ai-thinker-esp32-a1s/ai_thinker_esp32_a1s/: board.c  board.h  board_def.h  board_pins_config.c
radioJKK32/main/: CMakeLists.txt  Kconfig.projbuild  embed_stations.cmake  idf_component.yml  jkk_audio_main.c  jkk_audio_main.h  jkk_audio_sdwrite.c  jkk_audio_sdwrite.h  jkk_mono_lcd.c  jkk_mono_lcd.h  jkk_mqtt.c  jkk_mqtt.h  jkk_nvs.c  jkk_nvs.h  jkk_radio.h  jkk_settings.c  jkk_settings.h  radio_jkk.c  web_server.c  web_server.h
radioJKK32/main/RawSplit/: raw_split.c  raw_split.h
radioJKK32/main/display/: jkk_lcd_port.c  jkk_lcd_port.h  jkk_mono_lcd.c  jkk_mono_lcd.h  jkk_tools.c  jkk_tools.h
radioJKK32/main/vmeter/: README.md  README_PL.md  volume_meter.c  volume_meter.h
